test/samples/invalid/resolving/arg_global_shadow.maruir
struct M {
    b: bool;

}
fun foo(M: u8)
